<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.utfpr.amiltonjr.revisaoautomotiva.ManutencoesActivity">

        <TextView
            android:id="@+id/textViewDescricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp" />

        <EditText
            android:id="@+id/editTextDescricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="11dp"
            android:ems="10"
            android:inputType="textCapWords|textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDescricao"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textViewTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="7dp"
            android:text="@string/tipo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDescricao" />

        <TextView
            android:id="@+id/textViewValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/valor"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextQuilometragem" />

        <TextView
            android:id="@+id/textViewQuilometragem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/quilometragem"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerTipoRevisao" />

        <EditText
            android:id="@+id/editTextValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewValor"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editTextQuilometragem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewQuilometragem"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textViewVeiculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/veiculo"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextValor" />

        <Spinner
            android:id="@+id/spinnerVeiculo"
            android:layout_width="216dp"
            android:layout_height="39dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="9dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewVeiculo"
            android:layout_marginStart="16dp" />

        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/voltar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerVeiculo"
            android:layout_marginStart="127dp" />

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/salvar"
            android:enabled="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerVeiculo"
            android:layout_marginStart="16dp" />

        <Button
            android:id="@+id/btnAddVeiculo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/add_veiculo"
            android:textAlignment="center"
            android:textSize="22sp"
            app:layout_constraintLeft_toRightOf="@+id/spinnerVeiculo"
            android:layout_marginStart="21dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spinnerVeiculo"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/spinnerVeiculo"
            android:layout_marginBottom="0dp" />

        <Spinner
            android:id="@+id/spinnerTipoRevisao"
            android:layout_width="216dp"
            android:layout_height="37dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTipo"
            tools:layout_editor_absoluteY="116dp"
            android:entries="@array/tipos_manutencao"
            android:prompt="@string/selecione_tipo" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>