<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".VeiculoActivity">

        <TextView
            android:id="@+id/textViewPlaca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/placa"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/textViewMarca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/marca"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextPlaca"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/textViewCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/categoria"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextCor"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/textViewCor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/cor"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextModelo"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/textViewModelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/modelo"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextMarca"
            android:layout_marginStart="16dp" />

        <EditText
            android:id="@+id/editTextModelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:ems="10"
            android:inputType="textCapWords|textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewModelo"
            android:layout_marginStart="16dp" />

        <EditText
            android:id="@+id/editTextPlaca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="9dp"
            android:ems="10"
            android:inputType="textCapWords|textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPlaca"
            android:layout_marginStart="16dp" />

        <EditText
            android:id="@+id/editTextCor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:ems="10"
            android:inputType="textCapWords|textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewCor"
            android:layout_marginStart="16dp" />

        <EditText
            android:id="@+id/editTextMarca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:ems="10"
            android:inputType="textCapWords|textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewMarca"
            android:layout_marginStart="16dp" />

        <Spinner
            android:id="@+id/spinnerCategoriaVeiculo"
            android:layout_width="216dp"
            android:layout_height="37dp"
            android:entries="@array/veiculo_categoria"
            android:prompt="@string/selecione_categoria"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewCategoria"
            android:layout_marginStart="16dp" />

        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:text="@string/voltar"
            app:layout_constraintLeft_toRightOf="@+id/btnSalvar"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCategoriaVeiculo"
            android:layout_marginStart="23dp" />

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/salvar"
            android:enabled="false"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCategoriaVeiculo"
            android:layout_marginStart="16dp" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>